[package]
name = "portable-arc"
version = "0.0.1-dev"
edition = "2021"
license = "MIT OR APACHE-2.0"

[features]
critical-section = [
  "internal_select_portable_atomic_util",
  "dep:portable-atomic",
  "portable-atomic/critical-section",
]
internal_select_portable_atomic_util = ["dep:portable-atomic-util"]

[dependencies]
portable-atomic = { version = "1.10.0", optional = true }
portable-atomic-util = { version = "0.2.4", default-features = false, optional = true, features = [
  "alloc",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(portable_atomic_arc)',
  'cfg(unstable_maybe_portable_atomic_arc)',
] }
